--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -70,32 +70,57 @@
                                 <div class="support">
                                     <div class="youth allcare">
                                         <div class="gsprog_uni">
+
+                                            <div class="box_notice_wrap mt8">
+                                                <p class="tit">안내</p>
+                                                <ul class="box_list_area">
+                                                    <li class="txt_list">여러 대학의 프로그램에 참여를 원하실 경우, 대학마다 별도로 참여신청서를 제출해 주셔야 합니다.</li>
+                                                </ul>
+                                            </div>
+
                                             <div class="step_cont">
                                                 <h3 class="t2_sb mb16">신청 및 참여 절차</h3>
                                                 <div class="step_cont_area">
                                                     <ol>
-                                                        <li>
-                                                            <p><span>01.</span> 졸업생 특화프로그램<br aria-hidden="true"> 운영 대학조회</p>
-                                                            <p>검색 옵션에서 지역을<br aria-hidden="true"> 선택하거나 대학명을 입력 후<br aria-hidden="true"> 검색 버튼을 클릭합니다.</p>
+                                                        <li class="li_step01">
+                                                            <div class="tit">
+                                                                <span class="step_num" aria-hidden="true">01</span>
+                                                                <p class="mt16"><span class="sr_only">1단계: </span>졸업생 특화프로그램<br >운영 대학조회</p>
+                                                            </div>
+                                                            <div class="desc">
+                                                                <p>아래에서 졸업생<br> 특화프로그램 운영 대학<br> 정보를 확인할 수<br> 있습니다.</p>
+                                                            </div>
                                                         </li>
-                                                        <li>
-                                                            <p><span>02.</span> 사업 참여신청서<br aria-hidden="true"> 작성 및 제출</p>
-                                                            <p>참여신청서를 작성하고<br aria-hidden="true"> 제출하면, 참여신청서 승인 후<br aria-hidden="true"> 대학에서 운영하는 프로그램을<br aria-hidden="true"> 특화프로그램을<br aria-hidden="true"> 신청할 수 있습니다.</p>
+                                                        <li class="li_step02">
+                                                            <div class="tit">
+                                                                <span class="step_num" aria-hidden="true">02</span>
+                                                                <p class="mt16"><span class="sr_only">2단계: </span>참여신청서<br> 제출</p>
+                                                            </div>
+                                                            <div class="desc">
+                                                                <p>참여신청서를 작성하고<br> 제출합니다.</p>
+                                                                <p class="note" role="note"><span class="note_symbol" aria-hidden="true">&#8251;</span><span class="sr_only">참조: </span> 참여신청서 승인 후 대학에서<br> 운영하는 프로그램을 신청할 수<br> 있습니다.</p>
+                                                            </div>
                                                         </li>
-                                                        <li>
-                                                            <p><span>03.</span> 특화프로그램<br aria-hidden="true"> 신청</p>
-                                                            <p>운영 프로그램을<br aria-hidden="true"> 조회하고 신청합니다.<br aria-hidden="true"> 참여신청서가 승인된<br aria-hidden="true"> 대학의 프로그램만<br aria-hidden="true"> 신청할 수 있습니다.</p>
+                                                        <li class="li_step03">
+                                                            <div class="tit">
+                                                                <span class="step_num" aria-hidden="true">03</span>
+                                                                <p class="mt16"><span class="sr_only">3단계: </span>운영 프로그램<br> 신청</p>
+                                                            </div>
+                                                            <div class="desc">
+                                                                <p>운영 프로그램을 조회하고<br> 신청합니다.</p>
+                                                                <p class="note" role="note"><span class="note_symbol" aria-hidden="true">&#8251;</span><span class="sr_only">참조: </span> 참여신청서가 승인된 대학의<br> 프로그램만 신청할 수 있습니다.</p>
+                                                            </div>
                                                         </li>
-                                                        <li>
-                                                            <p><span>04.</span> 특화프로그램<br aria-hidden="true"> 참여 및 상담</p>
-                                                            <p>대상자로 선발되면<br aria-hidden="true"> 프로그램에<br aria-hidden="true"> 참여할 수 있습니다.</p>
+                                                        <li class="li_step04">
+                                                            <div class="tit">
+                                                                <span class="step_num" aria-hidden="true">04</span>
+                                                                <p class="mt16"><span class="sr_only">4단계: </span>운영 프로그램<br> 참여</p>
+                                                            </div>
+                                                            <div class="desc">
+                                                                <p>대상자로 선발되면<br> 프로그램에 참여할 수<br> 있습니다.</p>
+                                                            </div>
                                                         </li>
                                                     </ol>
-                                                    <div class="step_btn_box">
-                                                        <p id="statusNotice">희망하는 운영 프로그램이 여러 대학교에서 진행할 경우, 대학마다 각각 참여신청서를 제출하고 승인을 받아야 합니다.</p>                                   
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-                                                        <button type="button" class="btn medium type01" aria-describedby="statusNotice" id="btnMyStatus">나의 참여 현황 보기</button>
-                                                    </div>
                                                 </div>
                                             </div>
 
@@ -338,10 +363,16 @@
                                                 </div>
                                             </div>
 
-                                            <div class="statusDesc_cont">
-                                                <p id="statusDesc">나의 신청현황을 확인하실 수 있습니다.</p>
-                                                <!-- 개발적용시 버튼 구현필요 -->
-                                                <button type="button" aria-describedby="statusDesc" id="btnStatusDesc">나의 신청현황 보기</button>
+                                            <div class="statusdesc_cont">
+                                                <div class="statusdesc_info">
+                                                    <i aria-hidden="true" role="presentation"></i>
+                                                    <div class="statusdesc_box">
+                                                        <p class="s1_r">신청한 이력이 있으신가요?</p>
+                                                        <p class="t3_sb">나의 신청현황을 확인하실 수 있습니다.</p>
+                                                    </div>
+                                                </div>
+                                                <!-- 버튼: 설명과 연계 -->
+                                                <button type="button" aria-labelledby="btnStatusDesc statusDescTitle" aria-describedby="statusDescText" id="btnStatusDesc" onclick="">나의 신청현황 보기</button>
                                             </div>
                                         </div>
                                     </div>
