--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -33,7 +33,7 @@
                         <div class="my_ptcp_from">
                             <div class="box_group_wrap">
                                 <h3 class="t2_sb">신청인 정보</h3>
-                                <div class="box_table_wrap">
+                                <div class="box_table_wrap top_linewrap">
                                     <dl>
                                         <div class="dl_name">
                                             <dt>성명</dt>
@@ -69,7 +69,7 @@
                                                     <div class="cell">
                                                         <span class="box_ipt new_ipt">
                                                             <input type="text" id="bassAdrTxt" class="input_txt" title="대학교 명" readonly="" placeholder="AAA 대학교">
-                                                            <!-- <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button> -->
+                                                            <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                         </span>
                                                     </div>
                                                     <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
@@ -104,9 +104,124 @@
                                 </div>
                             </div>
 
+                            <div class="box_group_wrap radio_view_wrap">
+                                <h3 class="t2_sb">학적 정보</h3>
+                                <div class="box_table_wrap">
+                                    <dl>
+                                        <div class="dl_id">
+                                            <dt class="req_mark"><label for="studentId">학번<span class="blind"> 필수입력</span></label></dt>
+                                            <dd><input type="text" id="studentId" name="studentId" placeholder="학번을 입력해 주세요." title="학번 입력" required></dd>
+                                        </div>
+                                        <div class="dl_grade">
+                                            <dt class="req_mark"><label for="grade">학년<span class="blind"> 필수선택</span></label></dt>
+                                            <dd>
+                                                <select class="new_down" id="grade" name="grade" title="학년 선택" required>
+                                                    <option value="" selected disabled>학년을 선택해 주세요.</option>
+                                                    <option value="1">1학년</option>
+                                                    <option value="2">2학년</option>
+                                                    <option value="3">3학년</option>
+                                                    <option value="4">4학년</option>
+                                                    <option value="5">5학년</option>
+                                                </select>
+                                            </dd>
+                                        </div>
+                                        <div class="dl_major">
+                                            <dt class="req_mark"><label for="major">전공<span class="blind"> 필수입력</span></label></dt>
+                                            <dd>
+                                                <div class="box_table_group">
+                                                    <div class="cell">
+                                                        <span class="box_ipt new_ipt">
+                                                            <input type="text" id="major" class="input_txt" title="전공명" readonly placeholder="전공" required>
+                                                            <button type="reset" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
+                                                        </span>
+                                                    </div>
+                                                    <button type="button" class="btn medium type01 btnSearch" id="btnSearch" name="btnSearch" aria-haspopup="dialog">검색</button>
+                                                </div>
+                                            </dd>
+                                        </div>
+                                        <div class="dl_status">
+                                            <dt class="req_mark"><label for="status">상태<span class="blind"> 필수입력</span></label></dt>
+                                            <dd>
+                                                <select class="new_down" id="status" name="status" title="학적 상태 선택" required>
+                                                    <option value="" selected disabled>학적 상태를 선택해 주세요.</option>
+                                                    <option value="graduated">졸업</option>
+                                                    <option value="expected">졸업예정</option>
+                                                </select>
+                                            </dd>
+                                        </div>
+                                        <div class="dl_date">
+                                            <dt class="req_mark"><label for="gradDate">졸업(예정) 년월<span class="blind"> 필수입력</span></label></dt>
+                                            <dd>
+                                                <div class="date_area">
+                                                    <input type="text" title="졸업(예정) 날짜 입력" id="gradDate" name="gradDate" value="" placeholder="YYYY-MM-DD" class="hasDatepicker valid" required><button type="button" class="btn_calendar ui-datepicker-trigger" title="달력선택"></button><input name="startDate" type="hidden" data-type="datepicker" value="">
+                                                    <button type="button" class="calendar"><span>달력</span></button>
+                                                </div>
+                                            </dd>
+                                        </div>
+                                    </dl>
+                                </div>
+                            </div>
+
+                            <div class="box_group_wrap">
+                                <h3 class="t2_sb req_mark">개인정보 이용에 대한 동의</h3>
+                                <div class="agm_area">
+                                    <div class="agm_box">
+                                        <div class="agm_desc">
+                                            <p>“졸업생 특화 프로그램” 참여 신청과 관련하여 개인정보를 수집·이용·제공하기 위한 동의 절차</p>
+                                            <strong>&#x203B; 전문보기 후 개인정보 수집·이용·제공 동의를 선택할 수 있습니다.</strong>
+                                        </div>
+                                        <button type="button" class="btn_view_doc btn small type02" aria-label="개인정보 수집·이용·제공 동의서 전문보기" onclick="location.href=''"><span class="s1_r">전문보기</span></button>
+                                    </div>
+                                    
+                                    <div class="agm_cho">
+                                        <fieldset class="radio_filed radiof_type2">
+                                            <legend class="sr_only">개인정보 이용에 대한 동의여부</legend>
+                                            <div class="new_radio_item">
+                                                <input type="radio" id="customyes" name="custom_pv" value="yes">
+                                                <label for="customyes" class="custom_radio">
+                                                    <span class="radio_ui" aria-hidden="true"></span>
+                                                    <span class="sr_only">동의</span>
+                                                    <span class="label_text">동의</span>
+                                                </label>
+                                            </div>
+                                            <div class="new_radio_item">
+                                                <input type="radio" id="customno" name="custom_pv" value="no">
+                                                <label for="customno" class="custom_radio">
+                                                    <span class="radio_ui" aria-hidden="true"></span>
+                                                    <span class="sr_only">동의안함</span>
+                                                    <span class="label_text">동의안함</span>
+                                                </label>
+                                            </div>
+                                        </fieldset>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
+
+                <script>
+                    // 참여자분류 형태에 따라 학적정보 영역 보이기/숨기기
+                    document.addEventListener("DOMContentLoaded", function () {
+                        const radio1 = document.getElementById("customType1");
+                        const radio2 = document.getElementById("customType2");
+                        const viewWrap = document.querySelector(".radio_view_wrap");
+
+                        function toggleView() {
+                            if (radio1.checked) {
+                                viewWrap.hidden = false;
+                            } else {
+                                viewWrap.hidden = true;
+                            }
+                        }
+
+                        toggleView();
+
+                        radio1.addEventListener("change", toggleView);
+                        radio2.addEventListener("change", toggleView);
+                    });
+                </script>
             </div>
             <!-- 본문 내용 -->
 
