--- a/pc/14_UI_ADHPAcM02.html
+++ b/pc/14_UI_ADHPAcM02.html
@@ -272,9 +272,9 @@
                                                     <div class="section_right">
                                                         <span class="sel round new_sel_span">
                                                             <select id="recordCountPerPage" name="recordCountPerPage" class="w100px" title="보기 갯수 선택">
-                                                                <option value="10" selected="selected">10 개씩</option>
-                                                                <option value="30">30 개씩</option>
-                                                                <option value="50">50 개씩</option>
+                                                                <option value="10" selected="selected">10개씩 보기</option>
+                                                                <option value="30">30개씩 보기</option>
+                                                                <option value="50">50개씩 보기</option>
                                                             </select>
                                                         </span>
                                                         <button type="button" class="btn btn_round type02" onclick="">적용</button>
