--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <td>운영대학 목록</td>
                     <td>UI_ADHPAaM01</td>
                     <td class="status">작업중</td>
-                    <td>시안확정 이후에 작업예정</td>
+                    <td></td>
                     <td>
                         <a href="./pc/01_UI_ADHPAaM01.html" target="_blank">PC</a>
                         <a href="./mobile/01_UI_ADHPAaM01.html" target="_blank" class="none">MO</a>
@@ -89,7 +89,7 @@
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
                     <td class="status">PC완료</td>
-                    <td></td>
+                    <td>운영기간 박스 수정예정</td>
                     <td>
                         <a href="./pc/02_UI_ADHPAaM02.html" target="_blank">PC</a>
                         <a href="./mobile/02_UI_ADHPAaM02.html" target="_blank" class="none">MO</a>
