--- a/pc/05_UI_ADHPAbS03.html
+++ b/pc/05_UI_ADHPAbS03.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>운영대학 목록</title>
+        <title>05. 참여신청서 - 등록</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
