--- a/pc/07_UI_ADHPAbS05.html
+++ b/pc/07_UI_ADHPAbS05.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>참여신청서 - 조회</title>
+        <title>07. 참여신청서 - 회수(수정)</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
