--- a/pc/09_UI_ADHPAbP07.html
+++ b/pc/09_UI_ADHPAbP07.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>전공찾기팝업 - 조회/선택/등록</title>
+        <title>09. 전공찾기팝업 - 조회/선택/등록</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
