--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>운영대학 목록</title>
+        <title>12. 개인정보 수집·이용·제공에 대한 동의서(참여자용)</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
