--- a/pc/23_UI_ADHPAbS11.html
+++ b/pc/23_UI_ADHPAbS11.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>완료 페이지 - 신청서 제출 완료</title>
+        <title>23. 완료 페이지 - 신청서 제출 완료</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
