--- a/pc/02_UI_ADHPAaM02.html
+++ b/pc/02_UI_ADHPAaM02.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>운영대학 목록 - 프로그램 조회 팝업</title>
+        <title>02. 운영대학 목록 - 프로그램 조회 팝업</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
