--- a/pc/24_UI_ADHPAbS12.html
+++ b/pc/24_UI_ADHPAbS12.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>완료 페이지 - 회수 완료</title>
+        <title>24. 완료 페이지 - 회수 완료</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
