--- a/pc/27_UI_ADHPAbS15.html
+++ b/pc/27_UI_ADHPAbS15.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>완료 페이지 - 신청 완료</title>
+        <title>27. 완료 페이지 - 신청 완료</title>
         <script src="../pc/include/js/head.js"></script>
 
         <link rel="stylesheet" href="../pc/css/contents.css">
