--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <td></td>
                     <td>운영대학 목록</td>
                     <td>UI_ADHPAaM01</td>
-                    <td class="status">작업중</td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/01_UI_ADHPAaM01.html" target="_blank">PC</a>
