--- a/pc/01_UI_ADHPAaM01.html
+++ b/pc/01_UI_ADHPAaM01.html
@@ -278,7 +278,7 @@
                                                                 <td>AAA 대학교</td>
                                                                 <td>대구광역시 달서구 달구벌대로 1095(신당동) AAA 대학교</td>
                                                                 <td>000-0000-0000</td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="AAA 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="AAA 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="AAA 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -286,7 +286,7 @@
                                                                 <td>BBB 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) BBB대학교</td>
                                                                 <td></td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="BBB 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="BBB 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="BBB 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -294,7 +294,7 @@
                                                                 <td>CCC 대학교</td>
                                                                 <td>서울특별시 노원구 공릉로 232(공릉동) CCC 대학교</td>
                                                                 <td>000-0000-0000</td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="CCC 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="CCC 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="CCC 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -302,7 +302,7 @@
                                                                 <td>DDD 대학교</td>
                                                                 <td>대구광역시 달서구 달구벌대로 1095(신당동) DDD 대학교</td>
                                                                 <td></td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="DDD 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="DDD 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="DDD 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -310,7 +310,7 @@
                                                                 <td>EEE 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) EEE 대학교</td>
                                                                 <td></td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="EEE 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="EEE 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="EEE 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -318,7 +318,7 @@
                                                                 <td>FFF 대학교</td>
                                                                 <td>대구광역시 달서구 달구벌대로 1095(신당동) FFF 대학교</td>
                                                                 <td>000-0000-0000</td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="FFF 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="FFF 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="FFF 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -326,7 +326,7 @@
                                                                 <td>GGG 대학교</td>
                                                                 <td>서울특별시 광진구 능동로 209(군자동) GGG 대학교</td>
                                                                 <td>000-0000-0000</td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="GGG 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="GGG 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="GGG 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -334,7 +334,7 @@
                                                                 <td>HHH 대학교</td>
                                                                 <td>경기도 수원시 영통구 광교산로 154-42(이의동) HHH 대학교</td>
                                                                 <td></td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="HHH 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="HHH 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="HHH 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -342,7 +342,7 @@
                                                                 <td>III 대학교</td>
                                                                 <td>대구광역시 달서구 달구벌대로 1095(신당동) III 대학교</td>
                                                                 <td>000-0000-0000</td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="III 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="III 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="III 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
                                                             <tr>
@@ -350,7 +350,7 @@
                                                                 <td>JJJ 대학교</td>
                                                                 <td>경기도 수원시 영통구 광교산로 154-42(이의동) JJJ 대학교</td>
                                                                 <td>000-0000-0000</td>
-                                                                <td><button type="button" class="linkPop btnType_b1" aria-label="JJJ 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
+                                                                <td><button type="button" class="linkPop btnType_b2" aria-label="JJJ 대학교 운영 프로그램 상세보기" onclick="location.href=''">보기</button></td>
                                                                 <td><button type="button" class="btnType_b1" aria-label="JJJ 대학교 프로그램 신청하기">신청하기</button></td>
                                                             </tr>
 
