--- a/mobile/04_UI_ADHPAbM02.html
+++ b/mobile/04_UI_ADHPAbM02.html
@@ -196,7 +196,7 @@
                             <div class="paging"></div>
                         </div>
                         <div class="box_btn_wrap ml_auto mt24">
-                            <a href="./UI_ADHPAbS03.html" class="btn large type01 fill">신청서 작성</a>
+                            <a href="#" class="btn large type01 fill">신청서 작성</a>
                         </div>
                     </div>
                 </div>
