--- a/mobile/05_UI_ADHPAbS03.html
+++ b/mobile/05_UI_ADHPAbS03.html
@@ -53,7 +53,7 @@
                                         </div>
                                     </dl>
                                     <div class="box_btn_wrap ml_auto mt24">
-                                        <a href="./UI_ADHPAbS03.html" class="btn semilarge type03">신청서 작성</a>
+                                        <a href="#" class="btn semilarge type03">신청서 작성</a>
                                     </div>
                                 </div>
                             </div>
