--- a/pc/08_UI_ADHPAbP06.html
+++ b/pc/08_UI_ADHPAbP06.html
@@ -206,7 +206,7 @@
                                         <div class="new_popup newpop_uni_search" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
                                             <div class="newpop_tit">   
                                                 <h4>운영 대학 검색</h4>
-                                                <a href="./UI_ADHPAaM01.html" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
+                                                <a href="#" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
                                             </div>
                                             <div class="newpop_inner">
                                                 <article class="box_form_content">
