--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -305,7 +305,7 @@
                                         <div class="new_popup newpop_pv" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
                                             <div class="newpop_tit">   
                                                 <h4>개인정보 수집·이용·제공에 대한 동의서(참여자용)</h4>
-                                                <a href="./UI_ADHPAaM01.html" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
+                                                <a href="#" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
                                             </div>
 
                                             <div class="newpop_inner">
