--- a/pc/04_UI_ADHPAbM02.html
+++ b/pc/04_UI_ADHPAbM02.html
@@ -211,7 +211,7 @@
                                             </div> 
                                             
                                             <div class="box_btn_wrap ml_auto mt40">
-                                                <a href="./UI_ADHPAbS03.html" class="btn big type01 fill">신청서 작성</a>
+                                                <a href="#" class="btn big type01 fill">신청서 작성</a>
                                             </div>
                                         </div>
                                     </div>
