--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/01_UI_ADHPAaM01.html" target="_blank">PC</a>
-                        <a href="./mobile/01_UI_ADHPAaM01.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/01_UI_ADHPAaM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
