--- a/pc/05_UI_ADHPAbS03.html
+++ b/pc/05_UI_ADHPAbS03.html
@@ -293,7 +293,7 @@
                                                 </div>
 
                                                 <div class="btn_box mt40">
-                                                    <button type="button" class="btn big type02 btn_s_r" aria-label="신청 목록 페이지로 이동" onclick="window.location.href='./UI_ADHPAcS03.html';">목록</button>
+                                                    <button type="button" class="btn big type02 btn_s_r" aria-label="신청 목록 페이지로 이동" onclick="window.location.href=''">목록</button>
                                                     <button type="submit" id="srchBtn" class="btn big fill type01" onclick="">제출</button>
                                                 </div>
                                             </div>
