--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/07_UI_ADHPAbS05.html" target="_blank">PC</a>
-                        <a href="./mobile/07_UI_ADHPAbS05.html" target="_blank" class="none">MO</a>
+                        <a href="./mobile/07_UI_ADHPAbS05.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
